@@ -924,6 +924,35 @@ bool sqlrcursor::getColumnList(const char *table,
 	return getList(GETCOLUMNLIST,listformat,(table)?table:"",wild);
 }
 
+bool sqlrcursor::getProcedureBindAndColumnList(
+				const char *procedure,
+				const char *wild) {
+	return getProcedureBindAndColumnList(procedure,wild,
+					SQLRCLIENTLISTFORMAT_MYSQL);
+}
+
+bool sqlrcursor::getProcedureBindAndColumnList(
+				const char *procedure,
+				const char *wild,
+				sqlrclientlistformat_t listformat) {
+	if (pvt->_sqlrc->debug()) {
+		pvt->_sqlrc->debugPreStart();
+		pvt->_sqlrc->debugPrint("getting proceure bind "
+					"and column list for: \"");
+		pvt->_sqlrc->debugPrint(procedure);
+		pvt->_sqlrc->debugPrint("\"");
+		if (wild) {
+			pvt->_sqlrc->debugPrint(" - \"");
+			pvt->_sqlrc->debugPrint(wild);
+			pvt->_sqlrc->debugPrint("\"");
+		}
+		pvt->_sqlrc->debugPrint("\n");
+		pvt->_sqlrc->debugPreEnd();
+	}
+	return getList(GETPROCEDUREBINDANDCOLUMNLIST,
+				listformat,(procedure)?procedure:"",wild);
+}
+
 bool sqlrcursor::getList(uint16_t command, sqlrclientlistformat_t listformat,
 					const char *table, const char *wild) {
 
