@@ -41,6 +41,7 @@
 #define DBHOSTNAME 27
 #define DBIPADDRESS 28
 #define GET_TRANSLATED_QUERY 29
+#define GETPROCEDUREBINDANDCOLUMNLIST 30
 
 #define SUSPENDED_RESULT_SET 1
 #define NO_SUSPENDED_RESULT_SET 0
