@@ -2159,6 +2159,13 @@ bool sqlrservercontroller::getColumnList(sqlrservercursor *cursor,
 	return pvt->_conn->getColumnList(cursor,table,wild);
 }
 
+bool sqlrservercontroller::getProcedureBindAndColumnList(
+						sqlrservercursor *cursor,
+						const char *procedure,
+						const char *wild) {
+	return pvt->_conn->getProcedureBindAndColumnList(cursor,procedure,wild);
+}
+
 const char *sqlrservercontroller::getDatabaseListQuery(bool wild) {
 	return pvt->_conn->getDatabaseListQuery(wild);
 }
@@ -2174,6 +2181,12 @@ const char *sqlrservercontroller::getGlobalTempTableListQuery() {
 const char *sqlrservercontroller::getColumnListQuery(const char *table,
 								bool wild) {
 	return pvt->_conn->getColumnListQuery(table,wild);
+}
+
+const char *sqlrservercontroller::getProcedureBindAndColumnListQuery(
+							const char *procedure,
+							bool wild) {
+	return pvt->_conn->getProcedureBindAndColumnListQuery(procedure,wild);
 }
 
 void sqlrservercontroller::saveError() {
@@ -4071,6 +4084,40 @@ void sqlrservercontroller::setColumnListColumnMap(
 			break;
 		case SQLRSERVERLISTFORMAT_ODBC:
 			pvt->_columnmap=&(pvt->_odbccolumnscolumnmap);
+			break;
+		default:
+			pvt->_columnmap=NULL;
+			break;
+	}
+}
+
+void sqlrservercontroller::setProcedureBindAndColumnListColumnMap(
+					sqlrserverlistformat_t listformat) {
+
+	// for now, don't remap columns if api calls are used to get lists,
+	// the columns don't come back in the "native" format
+	// FIXME: this "happens to work" for odbc passthrough:
+	// ODBC -> sqlrelay client -> sqlrelay server -> ODBC -> some db
+	// but wouldn't if either ODBC were replaced with something else
+	if (pvt->_conn->getListsByApiCalls()) {
+		pvt->_columnmap=NULL;
+		return;
+	}
+
+	// FIXME: currently, the only connection that implements this is the
+	// odbc connection, which gets lists by api calls, but eventually we
+	// should implement it for other connections too...
+	switch (listformat) {
+		case SQLRSERVERLISTFORMAT_NULL:
+			pvt->_columnmap=NULL;
+			break;
+		case SQLRSERVERLISTFORMAT_MYSQL:
+			// FIXME: implement this
+			pvt->_columnmap=NULL;
+			break;
+		case SQLRSERVERLISTFORMAT_ODBC:
+			// FIXME: implement this
+			pvt->_columnmap=NULL;
 			break;
 		default:
 			pvt->_columnmap=NULL;
